<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Navigation</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text">Textfield</string>
    <string name="allow_edit">Allow edit</string>
    <string name="deny_edit">Deny edit</string>
    <string name="write_here">Write here:</string>
    <string name="textwritten">TextWritten:</string>
    <string name="back">Back</string>
    <string name="font_size">Font size:</string>
    <string name="Username">TextView</string>
    <string name="font_colour">Font Colour:</string>
    <string name="input_name">input name:</string>
    <string name="language">Language:</string>
    <string name="font_style">Font Style:</string>
    <string name="font_bolding">Font Bolding:</string>
    <string-array name="font_colors">
        <item>Green</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Purple</item>
    </string-array>
    <string-array name="Type">
        <item>normal</item>
        <item>bold</item>
        <item>italic</item>
    </string-array>
    <string-array name="Font">
        <item>roboto</item>
        <item>chunkfive</item>
        <item>pacifico</item>
        <item>greatvibes</item>
    </string-array>
    <string-array name="Languages">
        <item>Finnish</item>
        <item>English</item>
        <item>Swedish</item>
    </string-array>
</resources>