<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="266dp"
        android:layout_marginBottom="330dp"
        android:text="@string/language" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="389dp"
        android:text="@string/font_style" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="318dp"
        android:text="@string/font_bolding" />

    <Spinner
        android:id="@+id/bolds"
        android:layout_width="111dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="273dp" />

    <Spinner
        android:id="@+id/fonts"
        android:layout_width="111dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="345dp" />

    <Button
        android:id="@+id/allowEdit"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="223dp"
        android:layout_marginBottom="544dp"
        android:text="@string/allow_edit"
        android:textSize="20sp" />

    <Button
        android:id="@+id/denyEdit"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="544dp"
        android:text="@string/deny_edit"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="475dp"
        android:text="@string/font_colour" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="111dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="431dp" />

    <Button
        android:id="@+id/fontsize"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="239dp"
        android:layout_marginBottom="455dp"
        android:text="@string/font_size" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="166dp"
        android:layout_height="28dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="427dp"
        android:max="36"
        android:progress="2" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="365dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/input_name" />

    <Spinner
        android:id="@+id/lang"
        android:layout_width="139dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="242dp"
        android:layout_marginBottom="284dp" />

</RelativeLayout>