<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="319dp"
        android:layout_height="159dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="326dp"
        android:ems="10"
        android:hint="@string/write_here"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="149dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="488dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/textwritten" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="241dp"
        android:text="@string/back" />
</RelativeLayout>